fix the tabber to wrap properly

--- a/main.css
+++ b/main.css
@@ -11,7 +11,8 @@ table {border-collapse:collapse}
 td {border:solid 1px black; padding:5px}
 td:first-child {white-space:nowrap}
 td:last-child {font-style:italic}
-.footer {width:100%; text-align:right; font-style:italic; font-size:smaller}
+.f {width:100%; text-align:right; font-style:italic; font-size:smaller}
+.f img {float: left}
 .tabbertab a {font-weight: bold}
 
 /* A font by Jovanny Lemonad, see http://www.exljbris.com/fontinsans.html */
