--- a/tabber.css
+++ b/tabber.css
@@ -1,12 +1,13 @@
 .tabberlive .tabbertabhide {display:none}
 .tabberlive {margin-top: 1em; width: 98%}
-ul.tabbernav {margin:0; padding: 3px 0; border-bottom: 1px solid #778; font-weight: bolder; font-size: 10px}
+ul.tabbernav {margin:0; padding: 3px 0; font-weight: bolder; font-size: 10px}
+div.tabbernavs {overflow: hidden; border-bottom: 1px solid #aaa}
+.clear {clear: both; display: block}
 ul.tabbernav li {list-style: none; margin: 0; display: inline; font-family: arial, sans-serif}
-ul.tabbernav li a {padding: 3px 0.5em; padding-top: 0.2em; margin-left: 3px; border: 1px solid #778; border-bottom: none; background: #DDE; text-decoration: none}
+ul.tabbernav li a {padding: 3px 0.5em; padding-top: 0.2em; margin-left: 3px; border: 1px solid #778; border-bottom: none; background: #DDE; text-decoration: none; float: left}
 ul.tabbernav li a:link {color: #448}
 ul.tabbernav li a:hover {color: #fff; background: #00009c; border-color: #00009c}
-ul.tabbernav li.tabberactive a {background-color: #fff; border-bottom: 1px solid #fff}
-ul.tabbernav li.tabberactive a:hover {color: #000; background: white; border-bottom: 1px solid white}
+ul.tabbernav li.tabberactive a {background-color: #fff}
+ul.tabbernav li.tabberactive a:hover {color: #000; background: white}
 .tabberlive .tabbertab {padding: .5em 2em 2em 2em; border:1px solid #aaa; border-top:0}
 .tabberlive .tabbertab h2 {display:none}
-.tabberlive#tab2 .tabbertab {height:200px; overflow:auto}
